--- a/components/about/About.module.scss
+++ b/components/about/About.module.scss
@@ -1,12 +1,17 @@
 .about {
 	height: 100vh;
 
-	.titleTop {
-		background-color: var(--orange);
-		padding: 15px 0;
+	.description {
+		display: flex;
+		justify-content: center;
+		padding: 0 25px;
+		font-size: 24px;
+		line-height: 2;
 
-		h5 {
-			font-size: 48px;
+		p {
+			margin-top: 12%;
+			max-width: 767px;
+			text-align: center;
 		}
 	}
 }
