--- a/components/about/About.module.scss
+++ b/components/about/About.module.scss
@@ -1,8 +1,9 @@
 .about {
-	height: 100vh;
+	min-height: 100vh;
 
 	.description {
 		display: flex;
+		align-items: center;
 		justify-content: center;
 		padding: 0 25px;
 		font-size: 24px;
@@ -12,6 +13,15 @@
 			margin-top: 12%;
 			max-width: 767px;
 			text-align: center;
+		}
+
+
+		@media (max-width: 767px) {
+			font-size: 16px;
+
+			p {
+				margin-top: 15%;
+			}
 		}
 	}
 }
