--- a/components/experiences/Experiences.module.scss
+++ b/components/experiences/Experiences.module.scss
@@ -1,17 +1,18 @@
 .experiences {
-	height: 120vh;
+	min-height: 100vh;
 
 	.list {
 		margin: 15px;
 		display: flex;
+		overflow-x: scroll;
 	}
 
 	.company {
 		margin: 15px;
 		margin-top: 150px;
 		padding: 25px 15px;
-		background-color: var(--cream);
-		color: var(--blue);
+		background-color: var(--accent);
+		color: var(--base);
 		width: 320px;
 		display: flex;
 		flex-direction: column;
@@ -36,6 +37,14 @@
 		p {
 			font-size: 18px;
 			text-align: center;
+		}
+
+		@media (max-width: 767px) {
+			margin-bottom: 35px;
+			
+			p {
+				font-size: 14px;
+			}
 		}
 	}
 }
