--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -9,6 +9,35 @@
 	padding: 0 25px;
 	line-height: 1.5;
 
+	@media (max-width: 767px) {
+		font-size: 36px;
+	}
+
+	.row {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	.compound {
+		display: flex;
+		margin-right: 10px;
+
+		@media (max-width: 767px) {
+			margin-right: 10px;
+		}
+	}
+
+	.letter {
+		animation-duration: 1s;
+	  cursor:default;
+	  transition:all 0.3s;
+
+	  &:hover {
+			color: var(--cyan);
+			animation-name: rubberBand;
+		}
+	}
+
 	.yellow {
 		color: var(--yellow);
 	}
@@ -20,4 +49,14 @@
 	.orange {
 		color: var(--orange);
 	}
+}
+
+@keyframes rubberBand {
+  0% { transform: scale3d(1, 1, 1) }
+  30% { transform: scale3d(1.25, .75, 1) }
+  40% { transform: scale3d(0.75, 1.25, 1) }
+  50% { transform: scale3d(1.15, .85, 1) }
+  65% { transform: scale3d(.95, 1.05, 1) }
+  75% { transform: scale3d(1.05, .95, 1) }
+  100% { transform: scale3d(1, 1, 1) }
 }
