--- a/components/writing/Writing.module.scss
+++ b/components/writing/Writing.module.scss
@@ -1,11 +1,16 @@
 .writing {
-	height: 100vh;
+	min-height: 100vh;
 
 	.category {
 		display: flex;
 		justify-content: center;
 		margin: 0px 15px;
 		margin-top: 5%;
+
+		@media (max-width: 767px) {
+			flex-direction: column;
+			margin: 35px 25px;
+		}
 	}
 
 	.type {
@@ -18,6 +23,17 @@
 			transform: rotateZ(180deg);
 			writing-mode: vertical-lr;
 			font-size: 36px;
+		}
+
+		@media (max-width: 767px) {
+			flex-direction: column;
+			margin: 25px 0;
+
+			h2 {
+				writing-mode: horizontal-tb;
+				transform: rotateZ(0);
+				font-size: 24px;
+			}
 		}
 	}
 
@@ -66,6 +82,13 @@
 			span {
 				font-weight: 200;
 				font-size: 14px;
+			}
+
+			@media (max-width: 767px) {
+				a {
+					font-size: 16px;
+					letter-spacing: 1px;
+				}
 			}
 		}
 	}
