--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,15 +5,27 @@
   --pink: #e9c9dd;
   --orange: #d55648;
   --green: #2a4133;
+  --base: #182037;
+  --accent: #f7f2de;
+  --cyan: #16a085;
+}
+
+[data-theme="light"] {
+  --base: #f7f2de;
+  --accent: #182037;
 }
 
 html,
 body {
-  padding: 0;
   margin: 0;
   font-family: 'Raleway', sans-serif;
-  background-color: var(--blue);
-	color: var(--cream);
+  background-color: var(--base);
+  overflow: scroll;
+}
+
+#myPage {
+	background-color: var(--base);
+	color: var(--accent);
 }
 
 a {
@@ -24,3 +36,4 @@ a {
 * {
   box-sizing: border-box;
 }
+
